Prevent shifting on windows when scrollbar appears

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -34,6 +34,7 @@ body {
   margin:0;
   padding:0;
   background-color:$pageBackground;
+  overflow-y:scroll;
 }
 
 #mortgage-rates-wrapper {
